# TuttePolynomial

./: AUTHORS  ChangeLog  ChangeLog.txt  LICENSE  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  configure.in  makefile  makefile.am  makefile.config  makefile.in  makefile.std
cversion/: buildGraph.c  contractAfterDelete.c  dataStructureOperations.c  deleteContract.c  detectAndDeleteLoop.c  eliminateTriangle.c  enterEdgesBuildGraph.c  evaluateFives.c  evaluateFivesA.c  evaluateFivesa1.c  evaluateFivesb.c  evaluateFivesc.c  evaluateFivesd.c  evaluateFivese.c  evaluateFours.c  evaluateFoursDriver.c  evaluateSmallGraphs.c  evaluateThreesDriver.c  evaluateTutte.c  findDegOne.c  findInvariant.c  gotMultiple.c  hashIsoRtns.c  identifyFives.c  identifySixes.c  identifySixesA1.c  identifySixesA2.c  identifySixesB1.c  identifySixesB2.c  isoTests.c  k12.solution  makefile  multEdgeSmallGraphElimination.c  multiplyByFactors.c  multiplyByYPowers.c  nautaux.h  naututil.c  naututil.h  nauty.h  newOps.c  (+59 more)
exampleGraphs/: edge10  edge11  edge12  edge13  edge13.solution  edge14  edge14.solution  edge15  edge16  edge17  edge18  edge19  edge20  edge21  edge22  edge23  edge24  edge25  edge26  edge27  edge28  edge29  edge30  edge31  edge32  k10  k11  k11.solution  k12  k13  k13.solution  k14  k14.solution  k15  k16  k17  k18  k19  k20  k21  (+13 more)
examples/: edge10  edge10.solution  edge11.solution  edge12  edge12.solution  edge15  edge15.posSolution  edge19  edge20  edge21  edge23  edge26  edge27  edge28  edge29  edge32  edge32.solution  k10  k10.solution  k11  k13  k14  k15  k20  k22  k23  k24  k26  k27  k4  k8  k9
examples/cages/: README  cage1  cage1.flow  cage1.tutte  cage10  cage10.chromatic  cage10.flow  cage11  cage11.chromatic  cage11.flow  cage12  cage12.chromatic  cage12.flow  cage13  cage13.chromatic  cage13.flow  cage14  cage14.chromatic  cage14.flow  cage15  cage15.chromatic  cage15.flow  cage16  cage16.chromatic  cage16.flow  cage17  cage17.chromatic  cage17.flow  cage18  cage18.chromatic  cage18.flow  cage2  cage2.flow  cage2.tutte  cage3  cage3.flow  cage3.tutte  cage4  cage4.flow  cage4.tutte  (+14 more)
examples/proteins/: 1A0A.raw  1A0C.raw  1A2P.raw  1A2Z.raw  1A4M.raw  convert.cpp
nauty/: gtools.h  makefile  makefile.am  makefile.in  nautil.c  naututil.h  nauty  nauty.c  nauty.h
src/: TODO  config.h  eval_simple_fives.hpp  eval_simple_fours.hpp  gnuplot.script  headers.h  makefile  makefile.old  reductions.hpp  test  tutte.cpp  tutte.cpp.old  tuttean.cpp  tuttesaved.h
src/cache/: makefile  simple_cache.cpp  simple_cache.hpp
src/core/: contractAfterDelete.cpp  deleteContract.cpp  eliminateTriangle.cpp  evaluateTutte.cpp  findDegOne.cpp  makefile  multEdgeSmallGraphElimination.cpp  newOps.cpp  tutte.h
src/graph/: adjacency_list.hpp  algorithms.cpp  algorithms.hpp  buildGraph.cpp  buildGrapha.cpp  dataStructureOperations.cpp  detectAndDeleteLoop.cpp  gotMultiple.cpp  graph.h  isoTests.cpp  makefile  nauty_graph.cpp  nauty_graph.hpp  operationsOnGraphs.cpp  removeMultEdge.cpp  spanning_graph.hpp  test.cpp  treeRoutines.cpp  tutte_graph.hpp  vecmultiset.hpp
tutte/: Makefile.am  main.cpp  makefile.am  makefile.in  reductions.hpp  tutte.cpp  tutte.hpp
tuttean/: makefile.am  tuttean.cpp
tutteviz/: makefile.am  makefile.in
tuttex/: adjacency_list.hpp  bigint.cpp  bigint.hpp  bigint_test.cpp  biguint.hpp  biguint_test.cpp  bistream.cpp  bstreambuf.cpp  bstreambuf.hpp  cache.hpp  chromatic.cpp  computation.hpp  directed_adjacency_list.hpp  factor_poly.hpp  file_io.cpp  file_io.hpp  graph_io.hpp  graphs.hpp  hash.c  main.cpp  makefile  makefile.am  makefile.in  nauty_graph.cpp  nauty_graph.hpp  symbolic_poly.hpp  tutte.cpp  xy_term.hpp
util/: convert.cpp  convert.sh
(+117 files in other folders)
